--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,58 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
+button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: 0.3rem 0rem 0.3rem 0rem;
+}
 
-.content{
-    padding: 10px;
+button:hover {
+    background-color: #2980b9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    transform: translateY(2px);
+}
+
+button:active {
+    background-color: #1c6ea5;
+    /* Darker color when clicked */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    /* Minimal shadow on click */
+    transform: translateY(4px);
+    /* Further movement downwards */
+}
+
+.content {
+    padding: 1rem;
     min-width: 300px;
 }
 
-.button_cont button{
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    background: teal;
-    color: white;
+.full-btn button {
     width: 100%;
-
 }
 
-.button_cont button:hover{
-    box-shadow: 1px 0px 10p #eee;
+.save-load-tab {
+    /* width: 100%; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.save-load-tab button{
+    width: 47%;
+    display: inline !important;
+}
+
+.top-header {
+    text-align: center;
+    margin: 0.3rem 0rem 0.3rem 0rem;
 }
